test/replaceIndexOutOfBounds7.slq

def main(){
	x:=0:int[3];
	x[-1]:=x[-1]; /// error
	x[3]:=x[3]; /// error
	return x;
}
